virtual-keyboard/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  background: linear-gradient(90deg, #232323, #4a4a4a);
}

.keyboard-input {
  display: block;
  width: 950px;
  margin: 20px auto;
  padding: 10px;
  font-size: 16px;
  height: 35vh;
  border-radius: 10px;
  background: #fff;
  outline: none;
}

.keyboard {
  margin: 0 auto;
  margin-top: 20px;
  width: 960px;
  padding: 5px 0;
  user-select: none;
  border: 2px solid rgba(235, 232, 232, 0.7);
  border-radius: 10px;
}

.keyboard__keys {
  display: block;
  margin: 0 10px;
}

.keyboard__key {
  position: relative;
  display: inline-flex;
  padding: 20px 0 0 25px;
  height: 60px;
  width: 6%;
  margin: 3px;
  color: #ffffff;
  font-size: 14px;
  border-radius: 8px;
  background: linear-gradient(180deg, #282828, #202020);
  box-shadow: inset -8px 0 8px rgba(0, 0, 0, 0.15), inset 0 -8px 8px rgba(0, 0, 0, 0.25),
    0 0 0 2px rgba(0, 0, 0, 0.75), 10px 20px 25px rgba(0, 0, 0, 0.4);
  overflow: hidden;
}

.keyboard__key:active {
  transform: scale(0.9);
  box-shadow: 0 0 30px #d3d9da;
}

.keyboard__key:hover {
  cursor: pointer;
  box-shadow: 0 0 10px #d3d9da;
}

.keyboard__key::before {
  content: '';
  position: absolute;
  top: 3px;
  left: 4px;
  bottom: 14px;
  right: 12px;
  background: linear-gradient(90deg, #232323, #4a4a4a);
  border-radius: 8px;
  box-shadow: -10px -10px 10px rgba(255, 255, 255, 0.25), 10px 5px 10px rgba(0, 0, 0, 0.15);
  border-left: 1px solid #0004;
  border-bottom: 1px solid #0004;
  border-top: 1px solid #0004;
}

span {
  position: relative;
  background: none;
}

span::after {
  content: attr(data-key);
  position: absolute;
  left: -15px;
  top: -15px;
  font-size: 14px;
}

[data-code='Backspace'],
[data-code='CapsLock'],
[data-code='Enter'],
[data-code='ShiftLeft'] {
  padding: 0;
  justify-content: center;
  align-items: center;
  /* color: rgba(22, 21, 21, 0.9); */
  color: rgba(255, 255, 255, 0.7);
  font-weight: bold;
}

[data-code='mic'],
[data-code='Tab'],
[data-code='Delete'],
[data-code='AltLeft'],
[data-code='AltRight'],
[data-code='ControlLeft'],
[data-code='ControlRight'],
[data-code='MetaLeft'],
[data-code='ShiftRight'],
[data-code='ArrowUp'],
[data-code='ArrowDown'],
[data-code='ArrowLeft'],
[data-code='ArrowRight'] {
  padding: 0;
  justify-content: center;
  align-items: center;
  /* color: rgba(22, 21, 21, 0.9); */
  color: rgba(255, 255, 255, 0.7);
  font-weight: bold;
}

[data-code='Tab'] {
  width: 8%;
}

[data-code='Backspace'] {
  width: 13%;
}

[data-code='Delete'] {
  width: 11%;
}

[data-code='CapsLock'] {
  width: 10%;
}

[data-code='Enter'] {
  width: 9%;
}

[data-code='ShiftRight'] {
  width: 13.5%;
}

[data-code='ShiftLeft'] {
  width: 12%;
}

[data-code='ControlLeft'] {
  width: 7%;
}

[data-code='MetaLeft'] {
  width: 7%;
}

[data-code='AltLeft'] {
  width: 7%;
}

[data-code='AltRight'] {
  width: 7%;
}

[data-code='ControlRight'] {
  width: 7%;
}

[data-code='Space'] {
  padding: 0;
  justify-content: center;
  align-items: center;
  width: 34.5%;
  /* color: rgba(22, 21, 21, 0.9); */
  color: rgba(255, 255, 255, 0.7);
  font-weight: bold;
}

.keyboard__key--active {
  transform: scale(0.9);
  box-shadow: 0 0 30px #d3d9da;
}

.keyboard__key--caps {
  box-shadow: 0 0 30px #d3d9da;
}

.keyboard__key--caps::after {
  /* content: '\21EA'; */
  content: '\26AC';
  position: absolute;
  top: 5px;
  left: 65px;
  /* color: rgba(240, 232, 232, 0.7); */
  color: rgba(255, 255, 255, 0.7);
}

.keyboard__key--shift {
  box-shadow: 0 0 30px #d3d9da;
}

.keyboard__key--shift::after {
  content: '\21EA';
  /* content: '\2718'; */
  /* content: '\27A7'; */
  /* content: '\21EA'; */
  /* content: '\2718'; */
  /* content: '\27AE'; */
  position: absolute;
  top: 18px;
  left: 20px;
  /* color: rgba(240, 232, 232, 0.7); */
  color: rgba(255, 255, 255, 0.7);
}

.instruction {
  text-align: center;
  margin-top: 20px;
  font-size: 16px;
  color: #d3d9da;
}

#microphone {
  position: relative;
  width: 15px;
  height: 15px;
  background: none;
}

.active_pulse {
  animation: pulse 1s ease-in-out infinite;
}

@keyframes pulse {
  from {
    transform: scale(0.85);
  }
  50% {
    transform: scale(1.1);
  }
  to {
    transform: scale(0.85);
  }
}

